Fixed social media links on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -48,7 +48,7 @@
             margin-bottom: 2%;
         }
 
-        @media only screen and (min-width: 1081px) {
+        @include breakpoint($large) {
             > * {
                 margin-right: inherit;
             }
@@ -76,6 +76,22 @@
     .resume-section, .resume-projects {
         ul {
             margin-bottom: 2%;
+        }
+    }
+}
+
+.author__urls-wrapper {
+    display: block;
+    text-align: center;
+    @include breakpoint($large) {
+        text-align: initial;
+    }
+    .author__urls {
+        left: 25%;
+        right: 25%;
+        @include breakpoint($large) {
+            left: initial;
+            right: initial;
         }
     }
 }
